# SynapTCP

./: .gitmodules  CMakeLists.txt  README.md
cmake/: Packing.cmake
examples/: client.cpp  data-formating.cpp  server.cpp
include/: layer-ssl.hpp  socket.hpp  synapsock.hpp  tcp-client.hpp  tcp-server.hpp  tcp.hpp
src/: layer-ssl.cpp  socket.cpp  synapsock.cpp  tcp-client.cpp  tcp-server.cpp  tcp.cpp
test/: test-framed-data.cpp  test-simple.cpp  test-ssl-simple.cpp
